sampler/chain/projects/gson/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/gson/gson/src/main/java/com/google/gson/DefaultDateTypeAdapter.java:126: error: [NullAway] (INDEX= 24) (Covered) returning @Nullable expression from method with @NonNull return type
      return null;
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/gson/gson/src/main/java/com/google/gson/internal/bind/TypeAdapters.java:666: error: [NullAway] (INDEX= 113) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/gson/gson/src/main/java/com/google/gson/internal/bind/ReflectiveTypeAdapterFactory.java:98: error: [NullAway] (INDEX= 68) (Covered) returning @Nullable expression from method with @NonNull return type
      return null; // it's a primitive!
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/gson/gson/src/main/java/com/google/gson/internal/LinkedHashTreeMap.java:687: error: [NullAway] (INDEX= 158) (Covered) assigning @Nullable expression to @NonNull field
      node.left = node.parent = node.right = null;
                                           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/gson/gson/src/main/java/com/google/gson/internal/LinkedHashTreeMap.java:220: error: [NullAway] (INDEX= 137) (Covered) returning @Nullable expression from method with @NonNull return type
    return valuesEqual ? mine : null;
    ^

	(see http://t.uber.com/nullaway )
